Alignment fixed

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -10,3 +10,7 @@
 .title {
   margin-bottom: 1rem;
 }
+
+.subTitle {
+  text-align: center;
+}
